--- a/blog/.vitepress/theme/style.css
+++ b/blog/.vitepress/theme/style.css
@@ -103,6 +103,18 @@
   --vp-c-indigo-2: #0076c4;
   --vp-c-indigo-3: #0098ff;
 
+  a {
+    color: var(--vp-c-indigo-1);
+  }
+
+  a:hover {
+    color: var(--vp-c-indigo-2);
+  }
+
+  a:active {
+    color: var(--vp-c-indigo-3);
+  }
+
   --vp-home-hero-image-background-image: linear-gradient(
     -45deg,
     #0098ff 50%,
