--- a/blog/.vitepress/theme/style.css
+++ b/blog/.vitepress/theme/style.css
@@ -68,7 +68,7 @@
   --vp-c-danger-2: var(--vp-c-red-2);
   --vp-c-danger-3: var(--vp-c-red-3);
   --vp-c-danger-soft: var(--vp-c-red-soft);
-  --vp-font-family-base: 'Avenir Next', 'Roboto', sans-serif;
+  --vp-font-family-base: 'Hack', 'Avenir Next', 'Roboto', sans-serif;
 }
 
 /**
@@ -154,4 +154,40 @@
 
 .DocSearch {
   --docsearch-primary-color: var(--vp-c-brand-1) !important;
+}
+
+@font-face {
+  font-family: 'Hack';
+  src: url('assets/fonts/Hack-Regular.woff2') format('woff2'),
+      url('assets/fonts/Hack-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Hack';
+  src: url('assets/fonts/Hack-Bold.woff2') format('woff2'),
+      url('assets/fonts/Hack-Bold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Hack';
+  src: url('assets/fonts/Hack-BoldItalic.woff2') format('woff2'),
+      url('assets/fonts/Hack-BoldItalic.woff') format('woff');
+  font-weight: bold;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Hack';
+  src: url('assets/fonts/Hack-Italic.woff2') format('woff2'),
+      url('assets/fonts/Hack-Italic.woff') format('woff');
+  font-weight: normal;
+  font-style: italic;
+  font-display: swap;
 }
