--- a/blog/.vitepress/theme/style.css
+++ b/blog/.vitepress/theme/style.css
@@ -68,7 +68,7 @@
   --vp-c-danger-2: var(--vp-c-red-2);
   --vp-c-danger-3: var(--vp-c-red-3);
   --vp-c-danger-soft: var(--vp-c-red-soft);
-  --vp-font-family-base: 'Hack', 'Avenir Next', 'Roboto', sans-serif;
+  --vp-font-family-base: Hack, 'Avenir Next', 'Roboto', sans-serif;
 }
 
 /**
