--- a/blog/assets/css/stylesheet.css
+++ b/blog/assets/css/stylesheet.css
@@ -1,36 +1,39 @@
 @font-face {
-    font-family: 'Hack';
-    src: url('assets/fonts/Hack-Regular.woff2') format('woff2'),
-        url('assets/fonts/Hack-Regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+  font-family: 'Hack';
+  src:
+    url('assets/fonts/Hack-Regular.woff2') format('woff2'),
+    url('assets/fonts/Hack-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Hack';
-    src: url('assets/fonts/Hack-Bold.woff2') format('woff2'),
-        url('assets/fonts/Hack-Bold.woff') format('woff');
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
+  font-family: 'Hack';
+  src:
+    url('assets/fonts/Hack-Bold.woff2') format('woff2'),
+    url('assets/fonts/Hack-Bold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Hack';
-    src: url('assets/fonts/Hack-BoldItalic.woff2') format('woff2'),
-        url('assets/fonts/Hack-BoldItalic.woff') format('woff');
-    font-weight: bold;
-    font-style: italic;
-    font-display: swap;
+  font-family: 'Hack';
+  src:
+    url('assets/fonts/Hack-BoldItalic.woff2') format('woff2'),
+    url('assets/fonts/Hack-BoldItalic.woff') format('woff');
+  font-weight: bold;
+  font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Hack';
-    src: url('assets/fonts/Hack-Italic.woff2') format('woff2'),
-        url('assets/fonts/Hack-Italic.woff') format('woff');
-    font-weight: normal;
-    font-style: italic;
-    font-display: swap;
+  font-family: 'Hack';
+  src:
+    url('assets/fonts/Hack-Italic.woff2') format('woff2'),
+    url('assets/fonts/Hack-Italic.woff') format('woff');
+  font-weight: normal;
+  font-style: italic;
+  font-display: swap;
 }
-
